test-package-compiler/tests/snapshots/compiler_tests__stdlib_array_parser.snap
---
source: test-package-compiler/tests/compiler_tests.rs
expression: output
---
AST:
Module {
    expressions: [
        Assignment {
            target: Identifier(
                Identifier {
                    name: "point",
                    span: Span {
                        start: 122,
                        end: 127,
                    },
                },
            ),
            value: Error {
                message: "Unexpected token: expected expression, found {",
                span: Span {
                    start: 131,
                    end: 132,
                },
            },
            span: Span {
                start: 122,
                end: 132,
            },
        },
        Literal(
            Integer(
                10,
            ),
            Span {
                start: 132,
                end: 134,
            },
        ),
        Error {
            message: "Unexpected token: expected expression, found ,",
            span: Span {
                start: 134,
                end: 135,
            },
        },
        Error {
            message: "Unexpected token: expected expression, found }",
            span: Span {
                start: 138,
                end: 139,
            },
        },
        Error {
            message: "Unexpected token: expected expression, found }",
            span: Span {
                start: 159,
                end: 160,
            },
        },
        Error {
            message: "Unexpected token: expected expression, found }",
            span: Span {
                start: 171,
                end: 172,
            },
        },
        Error {
            message: "Unexpected token: expected expression, found ]",
            span: Span {
                start: 423,
                end: 424,
            },
        },
        Error {
            message: "Unexpected token: expected expression, found ]",
            span: Span {
                start: 479,
                end: 480,
            },
        },
        Error {
            message: "Unexpected token: expected expression, found ]",
            span: Span {
                start: 529,
                end: 530,
            },
        },
        Error {
            message: "Unexpected token: expected expression, found ]",
            span: Span {
                start: 590,
                end: 591,
            },
        },
        Error {
            message: "Unexpected token: expected expression, found }",
            span: Span {
                start: 675,
                end: 676,
            },
        },
        Error {
            message: "Unexpected token: expected expression, found }",
            span: Span {
                start: 685,
                end: 686,
            },
        },
    ],
    span: Span {
        start: 122,
        end: 732,
    },
    leading_comments: [
        Comment {
            content: "// Copyright 2026 James Casey",
            span: Span {
                start: 122,
                end: 127,
            },
            kind: Line,
        },
        Comment {
            content: "// SPDX-License-Identifier: Apache-2.0",
            span: Span {
                start: 122,
                end: 127,
            },
            kind: Line,
        },
        Comment {
            content: "// Test Array (tuple) operations",
            span: Span {
                start: 122,
                end: 127,
            },
            kind: Line,
        },
        Comment {
            content: "// Array creation",
            span: Span {
                start: 122,
                end: 127,
            },
            kind: Line,
        },
    ],
}

Diagnostics:
Diagnostic { severity: Error, message: "Unexpected token: expected expression, found {", span: Span { start: 131, end: 132 } }
Diagnostic { severity: Error, message: "Unexpected token: expected expression, found ,", span: Span { start: 134, end: 135 } }
Diagnostic { severity: Error, message: "Unexpected token: expected expression, found }", span: Span { start: 138, end: 139 } }
Diagnostic { severity: Error, message: "Unexpected token: expected expression, found }", span: Span { start: 159, end: 160 } }
Diagnostic { severity: Error, message: "Unexpected token: expected expression, found }", span: Span { start: 171, end: 172 } }
Diagnostic { severity: Error, message: "Unexpected token: expected expression, found ]", span: Span { start: 423, end: 424 } }
Diagnostic { severity: Error, message: "Unexpected token: expected expression, found ]", span: Span { start: 479, end: 480 } }
Diagnostic { severity: Error, message: "Unexpected token: expected expression, found ]", span: Span { start: 529, end: 530 } }
Diagnostic { severity: Error, message: "Unexpected token: expected expression, found ]", span: Span { start: 590, end: 591 } }
Diagnostic { severity: Error, message: "Unexpected token: expected expression, found }", span: Span { start: 675, end: 676 } }
Diagnostic { severity: Error, message: "Unexpected token: expected expression, found }", span: Span { start: 685, end: 686 } }
